# template-on-pr

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/actions/: setup.yaml
.github/actions/setup/: action.yaml
.github/actions/setup-python/: action.yaml
.github/workflows/: on-pull_request.yaml  template-build.yaml  template-python-tox-test.yaml  template-test.yaml
src/template_on_pr/: main.py
tests/: conftest.py  test_main.py
tests/unit/: test_main.py
